# zepr-backend

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py  test1.py  test2.py  test3.py  test4.py  test6.py  test7.py
alembic/: env.py
alembic/versions/: 0e74959c8fd2_message_columns_added.py  2a5f87a0d5cb_initial_migration.py  3077b10b035f_chat_column_added.py  3563997513fa_initial_commit.py  5334852e3b12_message_column_changed.py  6688521fcff1_message_table_added.py  82b70f414eef_connection_column_modified.py  8b40c1db0239_credits_column_added.py  985b96c6b654_connection_table_added.py  b398732fe4b1_csv_table_added.py  bacc56a698e5_csv_column_modified.py  d40254589bb1_message_column_changed.py  ddd1ddf7211d_chart_table_added.py  ffa6d2296c73_connection_table_added.py
app/: crud.py  main.py  models.py  run.py  schemas.py
app/core/: config.py  database.py  dependencies.py  prompts.py
app/crud/: chart.py  chat.py  connection.py  csv.py  message.py  task.py  user.py
app/models/: __init__.py  chart.py  chat.py  connection.py  csv.py  message.py  task.py  user.py
app/routers/: auth.py  chart.py  chat.py  connection.py  csv.py  message.py  task.py  user.py
app/schemas/: chart.py  chat.py  connection.py  csv.py  message.py  task.py  user.py
app/services/: langgraph.py  openai.py
app/utils/: csv.py  jwt.py  message.py  prompt.py
app/worker/: providers.py  tasks.py
